# avelang

./: .clang-format  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: compiler-ci.yml
cmake/: hunter_config.cmake
docs/: eleventy.config.js  package-lock.json  package.json
docs/content/: index.md
docs/content/_data/: languageReference.js  metadata.js  navigation.js  tutorials.js
docs/content/css/: styles.css
docs/content/development-tips/: debugging.md  index.md
docs/content/get-started/: installation.md
docs/content/language-reference/: builtin-functions.md  builtin-types.md  functions-control-flow.md  hardware-intrinsics.md  index.md
docs/content/tutorials/: 01-axpy.md  02-gemm.md  03-intrinsics.md  index.md
include/avelang/: config.h.in
lib/: CMakeLists.txt
lib/AST/: CMakeLists.txt  ast.h  ast_casting.h  ast_context.h  ast_nodes_expr.h  ast_nodes_stmt.h  visitor.h  visitor.inl
lib/Basic/: CMakeLists.txt  diagnostic.cc  diagnostic.h
lib/Dialect/: CMakeLists.txt
lib/Dialect/AveLang/IR/: AveLangDialect.cc  AveLangDialect.h  AveLangMemRefOps.td  AveLangOps.cc  AveLangOps.h  AveLangOps.td  AveLangTypes.cc  AveLangTypes.h  AveLangTypes.td  CMakeLists.txt
lib/Driver/: CMakeLists.txt  driver.cc  driver.h
lib/Frontend/: CMakeLists.txt  avelang_parser.cc  avelang_parser.h  avelang_parser_expr.cc  avelang_parser_test.cc  avelang_parser_utils.cc  avelang_parser_utils.h
lib/IR/: CMakeLists.txt  builtin_module.cc  builtin_module.h  constant_folder.cc  constant_folder.h  expr_generator.cc  function_generator.cc  generator_context.h  ir_context.cc  ir_context.h  layout_operation.cc  layout_operation.h  mangler.cc  mangler.h  mlir_generator.cc  mlir_generator.h  mlir_generator_impl.h  mlir_generator_test.cc  named_module.cc  named_module.h  parsing_utils.cc  parsing_utils.h  symbol_scope.cc  symbol_scope.h  symbol_table.cc  symbol_table.h  type_promotion.cc  type_promotion.h  type_system.cc  type_system.h
lib/IR/Intrinsics/: amdgpu_intrinsics.mlir  amdgpu_mfma_signatures.h  amdgpu_module.cc  intrinsic_support.cc  intrinsic_support.h  nvvm_intrinsics.mlir  nvvm_module.cc
lib/Utils/: CMakeLists.txt  assert.h  embedded_filesystem_view.cc  embedded_filesystem_view.h  monad_runner.h
lib/test/utils/: cuda_helper.h  hip_helper.h
python/: CMakeLists.txt
python/avelang/: __init__.py  _utils.py  testing.py
python/avelang/backends/: __init__.py  compiler.py  driver.py
python/avelang/compiler/: __init__.py  code_generator.py  compiler.py
python/avelang/language/: __init__.py  core.py  nvvm.py
python/avelang/runtime/: __init__.py  build.py  driver.py  specialize.py
python/src/: avelang_bindings.cc
scripts/ci/: build_llvm.sh  install_common_deps.sh  run_compiler_ci.sh
test/examples/gemv/: test_axpy.py
test/primitives/errors/: test_missing_language_import.py
test/primitives/jit/: test_global_constexpr.py  test_jit_calls.py  test_kernel_early_return.py  test_num_warps.py  test_shuffle.py  test_tanh_fast_approx.py  test_tensor_returns.py  test_tuple_returns.py
test/primitives/layout/: test_make_tensor_from_pointer.py  test_view_layouts.py
test/primitives/memory/: test_amdgpu_buffer_ops.py  test_amdgpu_buffer_store_subview.py  test_full_tensor.py  test_memref_subview.py  test_nvvm_tma_ops.py  test_nvvm_wgmma_ops.py  test_shared_memory.py  test_tensor_assignments.py
tools/: dump_assembly.py  dump_llvm_ir.py
(+20 files in other folders)
